# peace-pulse

./: .gitignore  AGENTS.md  CAPSTONE_SPEC.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
docs/: architecture-diagrams.md  manual-test.md
infra/: aws-ec2-deploy.md  backup-sqlite.sh  docker-compose.yml  python.Dockerfile
migrations/: env.py
migrations/versions/: 20260513_0001_initial_production_schema.py
services/api/: peacepulse_core.py  server.py
services/api_prod/: __init__.py  app.py  auth.py  config.py  copilot.py  db.py  domain.py  legacy_compat.py  main.py  models.py  privacy.py  schemas.py  security.py  services.py
services/sensor-sim/: sensor_sim.py
services/sync/: sync.py
services/worker/: worker.py
tests/: test_browser_smoke.py  test_core.py  test_production_api.py  test_server.py
