[project]
name = "peacepulse-hub"
version = "0.1.0"
description = "Offline-first PeaceTech edge hub prototype"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.uv]
package = false
